--- a/DmHelper2/src/main/resources/templates/SomethingHappens.html
+++ b/DmHelper2/src/main/resources/templates/SomethingHappens.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>PC Form Page</title>
+<title>Something Happened</title>
 </head>
 <body>
-	<h1>PC Form Page</h1>
 	<nobr>
 			<a th:href="@{/}">Back to Main Landing Page</a>
 			<br></br>
@@ -13,6 +12,8 @@
 			<br></br>
 			<a th:href="@{/api/v1/encounterOccupants}">Go to Encounter Occupants Page</a>
 	</nobr>
+	<br></br>
+	<h1>What happened?</h1>
 	<br></br>
 	<form action="addPc">
 		<button type="button" onclick="alert('You pressed the button!')">Click me!</button>
