commit for class

--- a/DmHelper2FE2/src/app/something-happens/something-happens.component.html
+++ b/DmHelper2FE2/src/app/something-happens/something-happens.component.html
@@ -4,18 +4,18 @@
 
 		<p>This example uses the addEventListener() method to attach a click event to a button.</p>
 
-		<button id="hitBtn">Hit</button>
-		<!-- <button id="missBtn">Miss</button>
-		<button id="critHitBtn">Critical Hit!</button>
-		<button id="critMissBtn">Critical Miss!</button>
-		<button id="bloodiedBtn">Bloodied</button>
-		<button id="killBtn">Kill</button>
-		<button id="massiveDmgBtn">Massive Damage!</button> -->
+		<button (click) = "onClickHit()" id="hitBtn">Hit </button>
+		<button (click) = "onClickMiss()" id="missBtn">Miss</button>
+		<button (click) = "onClickCritHit()" id="critHitBtn">Critical Hit!</button>
+		<button (click) = "onClickCritMiss()" id="critMissBtn">Critical Miss!</button>
+		<button (click) = "onClickBloodied()" id="bloodiedBtn">Bloodied</button>
+		<button (click) = "onClickKill()" id="killBtn">Kill</button>
+		<button (click) = "onClickMassiveDmg()" id="massiveDmgBtn">Massive Damage!</button>
 
 
 		<p id="demo"></p>
 
-		<script>
+		<!-- <script>
 			document.getElementById("hitBtn").addEventListener("click", function() {
 			document.getElementById("demo").innerHTML = "Whap!";
 			});
@@ -29,7 +29,7 @@
 			// document.getElementById("critMissBtn").addEventListener("click", function() {
 			//   document.getElementById("demo").innerHTML = "Big Wiff!";
 			// });
-		</script>
+		</script> -->
 
 	</body>
 </html>
