--- a/SpringBootWebAppFE2/src/app/student-list/student-list.component.html
+++ b/SpringBootWebAppFE2/src/app/student-list/student-list.component.html
@@ -7,6 +7,7 @@
 			<th>Email</th>
 			<th>DOB</th>
 			<th>Age</th>
+			<th>Actions</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -16,6 +17,9 @@
 			<td>{{student.email}}</td>
 			<td>{{student.dob}}</td>
 			<td>{{student.age}}</td> 
+			<td>
+				<button (click) = "updateStudent(student.id)" class="btn btn-info">Update</button>
+			</td>
 		</tr>
 	</tbody>
 </table>
