--- a/SpringBootWebAppFE2/src/app/update-student/update-student.component.html
+++ b/SpringBootWebAppFE2/src/app/update-student/update-student.component.html
@@ -1,1 +1,26 @@
-<p>update-student works!</p>
+<div class="col-md-6 offset-md-3">
+
+	<h3>Update Student</h3>
+
+	<form (ngSubmit) = "onSubmit()">
+		<div class="form-group">
+			<label>Id</label>
+			<input type="text" class="form-control" id="id"
+				[(ngModel)] = "student.id" name="id">
+		</div>
+
+		<div class="form-group">
+			<label>Name</label>
+			<input type="text" class="form-control" id="name"
+				[(ngModel)] = "student.name" name="name">
+		</div>
+
+		<div class="form-group">
+			<label>Email</label>
+			<input type="text" class="form-control" id="email"
+				[(ngModel)] = "student.email" name="email">
+		</div>
+
+		<button class="btn btn-success" type="submit">Submit</button>
+	</form>
+</div>
