--- a/DmHelper2FE2/src/app/app.component.html
+++ b/DmHelper2FE2/src/app/app.component.html
@@ -1,2 +1,32 @@
-<h1>{{title}}</h1>
-<app-something-happens></app-something-happens>
+<nav class="navbar navbar-expand-sm bg-info navbar-dark">
+  <ul class ="navbar-nav">
+      <li class="nav-itme">
+        <a routerLink="combat" routerLinkActive ="active" 
+          class="nav-link">Combat</a>
+      </li>
+       <li class="nav-itme">
+        <a routerLink="action-log" routerLinkActive ="active" 
+          class="nav-link">Action Log</a>
+      </li>
+       <li class="nav-itme">
+        <a routerLink="characters" routerLinkActive ="active" 
+          class="nav-link">Character List</a>
+      </li>
+  </ul>
+</nav>
+
+<h1 class="text-center">{{title}}</h1>
+
+<div class = "container">
+  <router-outlet></router-outlet>
+</div>
+
+<footer class="footer">
+  <div class="container">
+    <span>Your footer goes here...</span>
+  </div>
+</footer>
+
+
+<!-- <h1>{{title}}</h1>
+<app-something-happens></app-something-happens> -->
