--- a/SpringBootWebAppFE2/src/app/app.component.html
+++ b/SpringBootWebAppFE2/src/app/app.component.html
@@ -4,6 +4,9 @@
         <a routerLink="students" routerLinkActive ="active" 
           class="nav-link">Student List</a>
       </li>
+       <li class="nav-item">
+        <a routerLink="courses" routerLinkActive ="active" class="nav-link">Course List</a>
+      </li>
       <li class="nav-item">
         <a routerLink="create-student" routerLinkActive ="active" class="nav-link">Create Student</a>
       </li>
