--- a/DmHelper2FE2/src/app/character-stats/character-stats.component.html
+++ b/DmHelper2FE2/src/app/character-stats/character-stats.component.html
@@ -3,10 +3,15 @@
 	<div>
 		<label><b>Id:</b></label> {{character?.id}} <br>
 		<label><b>Name:</b></label> {{character?.name}} <br>
-		<!-- <label><b>Attacks:</b></label> {{student?.email}} <br>
-		<label><b>Hits:</b></label> {{student?.dob}} <br>
-		<label><b>Misses:</b></label> {{student?.age}} <br>
-		<label><b>Damage Given:</b></label> {{student?.age}} <br>
-		<label><b>Damage Taken:</b></label> {{student?.age}} <br> -->
+		<label><b>Attacks Made:</b></label> {{stats?.atkOut}} <br>
+		<label><b>Hits:</b></label> {{stats?.hitOut}} <br>
+		<label><b>Misses:</b></label> {{stats?.missOut}} <br>
+		<label><b>Damage Given:</b></label> {{stats?.dmgOut}} <br>
+		<label><b>Accuracy:</b></label> {{stats?.hitPercent}} <br>
+		<label><b>Targetted by Attacks:</b></label> {{stats?.atkIn}} <br>
+		<label><b>Attacks Taken:</b></label> {{stats?.hitIn}} <br>
+		<label><b>Attacks Avoided:</b></label> {{stats?.missIn}} <br>
+		<label><b>Damage Taken:</b></label> {{stats?.dmgIn}} <br>
+		<label><b>Dodge Percentage:</b></label> {{stats?.getMissedPercent}} <br>
 	</div>
 </div>
