--- a/DmHelper2FE2/src/app/combat/combat.component.html
+++ b/DmHelper2FE2/src/app/combat/combat.component.html
@@ -41,7 +41,10 @@
 <table class="row">
   <div class="column">
 	  <thead>Allies</thead>
-	  	
+	  <!-- <mat-menu #animals="matMenu">
+    <button mat-menu-item [matMenuTriggerFor]="attack">Vertebrates</button>
+     <button mat-menu-item [matMenuTriggerFor]="spell">Invertebrates</button> 
+    </mat-menu>	 -->
 		<button  class="btn btn-primary">figher1</button>
 		<br>
 		<button  class="btn btn-primary">figher2</button>
