--- a/SpringBootWebAppFE2/src/app/app.component.html
+++ b/SpringBootWebAppFE2/src/app/app.component.html
@@ -10,6 +10,9 @@
       <li class="nav-item">
         <a routerLink="create-student" routerLinkActive ="active" class="nav-link">Create Student</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="scholarships" routerLinkActive ="active" class="nav-link">Scholarship List</a>
+      </li>
   </ul>
 </nav>
 
