before adding Mat-Card to front end

--- a/DmHelper2FE2/src/app/app.component.html
+++ b/DmHelper2FE2/src/app/app.component.html
@@ -11,7 +11,11 @@
       </li>
        <li class="nav-itme">
         <a routerLink="characters" routerLinkActive ="active" 
-          class="nav-link">Character List</a>
+          class="nav-link">Characters</a>
+      </li>
+      <li class="nav-itme">
+        <a routerLink="create-encounter" routerLinkActive ="active" 
+          class="nav-link">Create Encounter</a>
       </li>
   </ul>
 </nav>
