--- a/DmHelper2FE2/src/app/character-list/character-list.component.html
+++ b/DmHelper2FE2/src/app/character-list/character-list.component.html
@@ -26,6 +26,10 @@
 				</button>
 			</td>
 		</tr>
+		<tr>
+			<button (click) = "createCharacter()" 
+				class = "btn btn-primary">Create Character</button>
+		</tr>
 <!-- 		
 		<tr *ngFor = "let stat of stats">
 			<td>{{stat.currentHp}}</td>	
