--- a/DmHelper2FE2/src/app/action-log/action-log.component.html
+++ b/DmHelper2FE2/src/app/action-log/action-log.component.html
@@ -2,18 +2,24 @@
 <table class = "table table-striped">
 	<thead>
 		<tr>
+			<th>Encounter ID</th>
 			<th>Id</th>
-			<th>Attacker Id</th>
-			<th>Attacked Id</th>
+			<th>Type of Action</th>
+			<th>Attacker ID</th>
+			<th>Attacked ID</th>
 			<th>Damage Done</th>
+			<th>Effect</th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr *ngFor = "let action of actions">
+			<td>{{action.encounterId}}</td>
 			<td>{{action.id}}</td>
-			<td>{{action.attackerId}}</td>
+			<td>{{action.type}}</td>
+		<td>{{action.attackerId}}{{(action.attackerId)}}</td>
 			<td>{{action.attackedId}}</td>
 			<td>{{action.dmgDone}}</td>
+			<td>{{action.effect}}</td>
 			<!-- <td>
 				<button (click) = "updateStudent(action.id)" class="btn btn-primary">Update</button>
 			</td>
