--- a/DmHelper2FE2/src/app/app.component.css
+++ b/DmHelper2FE2/src/app/app.component.css
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
 	position : sticky footer;
 	bottom : 0;
 	width : 100%;
@@ -6,4 +6,4 @@
 	background-color : #0DCAF0;
 	text-align : center;
 	color : white;
-}
+} */
