--- a/DmHelper2FE2/src/app/create-encounter/create-encounter.component.html
+++ b/DmHelper2FE2/src/app/create-encounter/create-encounter.component.html
@@ -1,1 +1,38 @@
-<p>create-encounter works!</p>
+
+<h2>Create Encounter</h2>
+
+<div class="row">
+<div class="column">
+<mat-card>
+	<mat-card-title>Allies</mat-card-title>
+	<mat-card-content>
+		<mat-chip-list class="mat-chip-list-stacked" aria-label="Color selection">
+			<!-- *ngFor="let chip of availableColors" selected [color]="chip.color" -->
+			<mat-chip *ngFor="let character of allies">
+				{{character.name}}
+			</mat-chip>
+		</mat-chip-list>
+		<mat-chip>Add
+			<mat-select (ngSubmit) = "onSubmit()">
+				<mat-option *ngFor="let character of allCharacters" (click) =
+					"loadAlly(character)" type="submit">
+					{{character.name}}
+				</mat-option>
+			</mat-select>
+		</mat-chip>
+		<!-- <mat-chip (click) = "createCharacter()">Add Combatant</mat-chip> -->
+	</mat-card-content>
+</mat-card>
+</div>
+
+<div class="column">
+<mat-card>
+	<mat-card-title>Enemies</mat-card-title>
+	<mat-card-content>
+
+	</mat-card-content>
+</mat-card>
+</div>
+</div>
+
+
